--- a/_posts/2019-07-02-the-us-narrative-today.html
+++ b/_posts/2019-07-02-the-us-narrative-today.html
@@ -2603,107 +2603,107 @@ stories:
   domain: http://www.gtrnews.com/union.htm
   link: https://gtrnews.com/discovery-awards-names-two-owasso-students-oklahoma-high-school-musical-theatre-winners/
 images:
-- name: beach-rocks-beach-rocks-currents-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-nazi-poster.jpg
-- name: white-house-whitehouse-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-matrix.jpg
-- name: oldcabin-oldcabin-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-gan-vogh.jpg
-- name: oldhouse-oldhouse-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dark-soul.jpg
-- name: rockingchair-rockingchair-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-wols.jpg
-- name: abe-lincoln-one-smooth-ride-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smooth-ride-file-00-00-07-91.jpg
-- name: server-cloud-server-racks-clouds-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-mucha-mult.jpg
-- name: server-cloud-server-racks-door-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-matrix.jpg
-- name: aws-s3-tunnel-tunnel-purp-paper-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-tunnel-tunnel-purp-paper-still.jpg
-- name: server-cloud-server-racks-clouds-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-kandinsky-bv.jpg
-- name: flower-barbed-wire-flower-barbed-wire-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-nazi-poster.jpg
-- name: oldsmallboat-oldsmallboat-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-wols.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
-- name: border-fence-border-fence-on-hill-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-bright-sand.jpg
-- name: stories-oldgaspumps-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-oldgaspumps-umberto-bocc.jpg
-- name: amusement-park-amusement-park-2-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-rainbow-festival.jpg
-- name: legal-statue-legalstatue-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-granite.jpg
-- name: aws-s3-stories-window-mountain-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-window-mountain-clean-view.jpg
-- name: oldsmallboat-oldsmallboat-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-yellow-collage.jpg
-- name: store-on-corner-store-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-purp-paper.jpg
-- name: liberty-back-statue-liberty-back-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-umberto-bocc.jpg
-- name: bordercrossing-bordercrossing-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-wols.jpg
-- name: fence-fence-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-gan-vogh.jpg
+- name: carry-load-carryload-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-purp-paper.jpg
+- name: nazi-invasion-IMG_7847.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7847.jpg
 - name: border-fence-border-fence-on-hill-clean-view.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-clean-view.jpg
-- name: dragon-desert-desert-dragon-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-rain.jpg
-- name: oldtrain-oldtrain-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-umberto-bocc.jpg
-- name: blossombar-rainbow-festival-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-rainbow-festival-file-00-00-50-62.jpg
-- name: oldcabin-store-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-dark-dali.jpg
-- name: beach-rocks-beach-rocks-currents-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-satan-red.jpg
-- name: death-valley-death-valley-national-park-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-post-modern.jpg
-- name: gypsymosaic-gypsy-eyes-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-ww2-color.jpg
-- name: white-house-lawn-white-house-lawn-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-atari-asteroids.jpg
-- name: christianity-christianity-under-construction-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-marcel-duchamp.jpg
-- name: diamondcreek-diamondcreek-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/diamondcreek-diamondcreek-still-1200.jpg
-- name: oldhousecars-house-old-cars-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-matrix.jpg
-- name: hollywood-building-hollywood-building-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-far-away.jpg
-- name: supreme-court-supremecourt-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-kand-two.jpg
-- name: beach-clouds-lifeguard-beachclouds-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-colorful-blocks.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-crafty-painting.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-crafty-painting.JPG
-- name: oldhouse-oldhouse-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-hot-spicy.jpg
-- name: locked-up-steam-lock-up-steam-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-sand-paper.jpg
-- name: containership-containership-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dali-three.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-oily-mcoilface.jpg
-- name: mistywoods-babyfoot-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-gred-mash.jpg
-- name: downtown-trucksilo-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-atari-missle.jpg
-- name: blossombar-crafty-painting-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-62.jpg
-- name: udnie-IMG_7288.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7288.jpg
-- name: stories-G0520270-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-G0520270-blue-circuit.jpg
-- name: aws-s3-square-yuma-downtown-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-yuma-downtown-square.jpg
-- name: server-cloud-server-racks-clouds-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit-5.jpg
-- name: power-lines-power-lines-empty-space-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-alberto-giacometti.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-graham-sutherland.jpg
+- name: old-door-lock-old-door-lock-2-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-attack-planes.jpg
+- name: wind-mills-windmills-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-crunch-paper.jpg
+- name: status-berlin-status-berlin-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-oily-mcoilface.jpg
+- name: eduardo-eduardo-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-green-zuma.jpg
+- name: birdhouse-birdhouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dark-soul.jpg
+- name: containership-containership-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-monet-one.jpg
+- name: aws-s3-square-C3JdRtDWMAUqS6L.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C3JdRtDWMAUqS6L.jpg
+- name: blossombar-sand-paper-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sand-paper-file-00-00-50-62.jpg
+- name: stories-raven-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-raven-fence.jpg
+- name: old-gas-pumps-oldgaspumps-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dark-dali.jpg
+- name: stories-capital-battle-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-capital-battle-blue-circuit.jpg
+- name: capital-battle-capitolbattle-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dark-dali.jpg
+- name: school-clouds-church-clouds-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-china-prop.jpg
+- name: lincoln-memorial-lincolnmemorial-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-kand-two.jpg
+- name: oldhouse-granaryfield-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-matrix.jpg
+- name: old-church-oldchurch-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-colorful-blocks.jpg
+- name: razorcliff-razorcliff-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-satan-red.jpg
+- name: white-house-lawn-white-house-lawn-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-blue-brush.jpg
+- name: ellis-island-ellisisland-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-rainbow-festival.jpg
+- name: gypsymosaic-gypsy-eyes-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-plentiful.jpg
+- name: walled-garden-walled-garden-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-atari-asteroids.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-space-pizza.jpg
+- name: bordercrossing-bordercrossing-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-green-zuma.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-plentiful.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-plentiful.png
+- name: miamibeach-miamibeach-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-light-dali.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-attack-planes.jpg
+- name: stories-new-42-16-600-500-0-max-1-1-2-0.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-42-16-600-500-0-max-1-1-2-0.jpg
+- name: nyc-flag-nycflag-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-cinnamon-rolls.jpg
+- name: fence-fence-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-aqua.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-nazi-poster.jpg
+- name: old-house-oldhouse-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-yellow-collage.jpg
+- name: aws-s3-square-C2zqzsfVIAA2hcM-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2zqzsfVIAA2hcM-square.jpg
+- name: legal-statue-legalstatue-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-nazi-poster.jpg
+- name: liberty-back-statue-liberty-back-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-umberto-bocc.jpg
+- name: crow-crow-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-internet-numbers.jpg
+- name: dc-statue-dcstatue-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-far-away.jpg
+- name: white-house-lawn-white-house-lawn-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-pablo-blue.jpg
+- name: ellis-island-ellisisland-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-umberto-bocc.jpg
+- name: paris-paris-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dark-soul.jpg
+- name: abe-lincoln-one-really-hot-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-really-hot-file-00-00-00-00.jpg
+- name: border-fence-border-fence-on-hill-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-emily-carr.jpg
+- name: sand-hand-sand-hand-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-hot-spicy.jpg
+- name: server-cloud-server-racks-clouds-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-attack-planes.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-free-woman.jpg
+- name: locked-up-steam-lock-up-steam-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-free-woman.jpg
+- name: store-on-corner-oldcabin-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dark-soul.jpg
+- name: beach-rocks-beach-rocks-currents-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-rainbow-festival.jpg
 ---
 To Boost Milk, Dairy Groups See Hope In Lattes In Schools.&nbsp;Community Asks 'Where Is Noah?' At Vigil For Missing Toddler.&nbsp;House Democrats File Lawsuit To Obtain President Trump's Tax Returns.&nbsp;Media Coalition Files Complaint About Senate.&nbsp;House Committee Sues IRS, Treasury For Trump Tax Returns.&nbsp;Community Lends A Hand For The Marathon.&nbsp;Potential Loan Scam And Stolen Mustang Highlighted In Southgate Police Reports.&nbsp;Raiderettes Split Short Week.&nbsp;
